Update lists at 20250808-1201

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -610,6 +610,54 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
+allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::145a:4f4d;
+allow 2a10:1fc0:1::1c97:5209;
+allow 2a10:1fc0:1::201b:fde8;
+allow 2a10:1fc0:1::27c8:f14;
+allow 2a10:1fc0:1::28e8:2439;
+allow 2a10:1fc0:1::2acd:670c;
+allow 2a10:1fc0:1::3120:be14;
+allow 2a10:1fc0:1::317b:c7b3;
+allow 2a10:1fc0:1::3a85:fc4a;
+allow 2a10:1fc0:1::463b:c574;
+allow 2a10:1fc0:1::4953:f0d1;
+allow 2a10:1fc0:1::49fd:671e;
+allow 2a10:1fc0:1::6e6d:3f93;
+allow 2a10:1fc0:1::7028:40e3;
+allow 2a10:1fc0:1::7072:6325;
+allow 2a10:1fc0:1::709e:5af4;
+allow 2a10:1fc0:1::736f:432a;
+allow 2a10:1fc0:1::86d8:ed21;
+allow 2a10:1fc0:1::902c:9891;
+allow 2a10:1fc0:1::91c7:7465;
+allow 2a10:1fc0:1::97fa:bc35;
+allow 2a10:1fc0:1::9862:7394;
+allow 2a10:1fc0:1::9a61:242e;
+allow 2a10:1fc0:1::9c89:5f8;
+allow 2a10:1fc0:1::9ef2:318e;
+allow 2a10:1fc0:1::a04e:42ef;
+allow 2a10:1fc0:1::a06f:421;
+allow 2a10:1fc0:1::a187:7bdf;
+allow 2a10:1fc0:1::a2d9:c960;
+allow 2a10:1fc0:1::a8af:1603;
+allow 2a10:1fc0:1::a94d:cec3;
+allow 2a10:1fc0:1::b989:f19b;
+allow 2a10:1fc0:1::b9b6:1c9a;
+allow 2a10:1fc0:1::bf4a:70cd;
+allow 2a10:1fc0:1::c181:cad7;
+allow 2a10:1fc0:1::c5e5:1656;
+allow 2a10:1fc0:1::c81a:ecdc;
+allow 2a10:1fc0:1::c89d:565d;
+allow 2a10:1fc0:1::cae0:9c9;
+allow 2a10:1fc0:1::cfba:db18;
+allow 2a10:1fc0:1::d3ed:ed37;
+allow 2a10:1fc0:1::d3f0:7036;
+allow 2a10:1fc0:1::d54e:8f12;
+allow 2a10:1fc0:1::d6af:9460;
+allow 2a10:1fc0:1::d8fd:efbf;
+allow 2a10:1fc0:1::da9b:f7cd;
+allow 2a10:1fc0:1::df12:4fa1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
