--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -476,7 +477,6 @@ allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.247.226.95;
-allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
@@ -571,6 +571,12 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
+allow 193.189.100.201;
+allow 193.189.100.202;
+allow 193.189.100.203;
+allow 193.189.100.204;
+allow 193.189.100.205;
+allow 193.189.100.206;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
@@ -741,6 +747,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1367,6 +1374,12 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
+allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
+allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1446,6 +1459,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1472,7 +1486,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1577,6 +1590,7 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.246.92.35;
 allow 46.250.243.29;
+allow 46.253.4.208;
 allow 46.38.243.210;
 allow 5.101.82.22;
 allow 5.104.84.183;
