--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -119,6 +119,7 @@ set_real_ip_from 109.71.252.182;
 set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -476,7 +477,6 @@ set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.247.226.95;
-set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
@@ -571,6 +571,12 @@ set_real_ip_from 193.189.100.197;
 set_real_ip_from 193.189.100.198;
 set_real_ip_from 193.189.100.199;
 set_real_ip_from 193.189.100.200;
+set_real_ip_from 193.189.100.201;
+set_real_ip_from 193.189.100.202;
+set_real_ip_from 193.189.100.203;
+set_real_ip_from 193.189.100.204;
+set_real_ip_from 193.189.100.205;
+set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
@@ -741,6 +747,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1367,6 +1374,12 @@ set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
+set_real_ip_from 2a0f:df00:0:255::201;
+set_real_ip_from 2a0f:df00:0:255::202;
+set_real_ip_from 2a0f:df00:0:255::203;
+set_real_ip_from 2a0f:df00:0:255::204;
+set_real_ip_from 2a0f:df00:0:255::205;
+set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1446,6 +1459,7 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1472,7 +1486,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1577,6 +1590,7 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.246.92.35;
 set_real_ip_from 46.250.243.29;
+set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
