--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -68,6 +68,7 @@ allow 107.189.1.175;
 allow 107.189.1.228;
 allow 107.189.12.3;
 allow 107.189.12.7;
+allow 107.189.13.180;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.14.4;
@@ -77,6 +78,7 @@ allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
+allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
 allow 107.189.4.12;
@@ -845,6 +847,7 @@ allow 45.145.166.146;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
+allow 45.38.20.153;
 allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
