--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -68,6 +68,7 @@ set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
+set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
@@ -77,6 +78,7 @@ set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
+set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
@@ -957,6 +959,7 @@ set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1537,6 +1540,7 @@ set_real_ip_from 45.145.166.146;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
+set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
