--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -68,6 +68,7 @@ set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
+set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
@@ -77,6 +78,7 @@ set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
+set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
@@ -845,6 +847,7 @@ set_real_ip_from 45.145.166.146;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
+set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
