--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -192,6 +192,7 @@ set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
