--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -838,7 +838,6 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
-deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -897,7 +896,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1108,6 +1106,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1607,6 +1606,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
