--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1368,6 +1368,7 @@ allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1773,7 +1774,7 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.164.89;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
