--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -182,6 +182,7 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 164.132.58.8;
 allow 165.73.242.163;
+allow 167.249.30.245;
 allow 171.25.193.131;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -278,7 +279,6 @@ allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
-allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
@@ -694,7 +694,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
-allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -837,6 +836,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -895,6 +895,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1460,6 +1461,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1486,7 +1488,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1772,6 +1773,7 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
+allow 94.74.164.89;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
