--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -182,6 +182,7 @@ deny 163.172.45.102;
 deny 164.132.172.209;
 deny 164.132.58.8;
 deny 165.73.242.163;
+deny 167.249.30.245;
 deny 171.25.193.131;
 deny 171.25.193.20;
 deny 171.25.193.234;
@@ -278,7 +279,6 @@ deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.129.61.1;
 deny 185.129.61.10;
-deny 185.129.61.129;
 deny 185.129.61.2;
 deny 185.129.61.3;
 deny 185.129.61.4;
@@ -694,7 +694,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
-deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -837,6 +836,7 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -895,6 +895,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1460,6 +1461,7 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1486,7 +1488,6 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1772,6 +1773,7 @@ deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.72.103.33;
 deny 94.72.104.135;
+deny 94.74.164.89;
 deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.143.193.125;
