--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -53,7 +53,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
-deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -130,6 +129,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
