--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -18,6 +18,7 @@ set_real_ip_from 2001:41d0:701:1000::5196;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
+set_real_ip_from 2001:41d0:f00:5600::5ad6:7567;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:620:20d0::23;
