--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,7 +158,6 @@ allow 149.202.79.129;
 allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
-allow 152.53.133.14;
 allow 152.53.184.161;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -1108,6 +1107,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1154,7 +1154,6 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
-allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1463,7 +1462,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1490,6 +1488,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1608,6 +1607,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
