--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -158,7 +158,6 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
-set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.184.161;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
@@ -1108,6 +1107,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1154,7 +1154,6 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
-set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
@@ -1463,7 +1462,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1490,6 +1488,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1608,6 +1607,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
