--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -192,6 +192,7 @@ deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 deny 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+deny 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 deny 2605:6400:30:f440:757e:adf1:55f7:5a31;
 deny 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 deny 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -338,7 +339,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -402,6 +402,7 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -471,6 +472,8 @@ deny 2a0b:f4c2::19;
 deny 2a0b:f4c2::2;
 deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
+deny 2a0b:f4c2::22;
+deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -479,6 +482,7 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
+deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -489,6 +493,7 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
+deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -499,11 +504,17 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
+deny 2a0b:f4c2::28;
+deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
+deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
