--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -69,6 +69,7 @@ set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
+set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
@@ -78,6 +79,7 @@ set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
+set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
@@ -230,6 +232,7 @@ set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
+set_real_ip_from 178.175.137.223;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
 set_real_ip_from 178.20.55.16;
@@ -318,6 +321,7 @@ set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
 set_real_ip_from 185.220.100.255;
+set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
@@ -400,7 +404,17 @@ set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.2;
 set_real_ip_from 185.220.101.20;
 set_real_ip_from 185.220.101.21;
+set_real_ip_from 185.220.101.22;
+set_real_ip_from 185.220.101.23;
+set_real_ip_from 185.220.101.24;
+set_real_ip_from 185.220.101.25;
+set_real_ip_from 185.220.101.26;
+set_real_ip_from 185.220.101.27;
+set_real_ip_from 185.220.101.28;
+set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
+set_real_ip_from 185.220.101.30;
+set_real_ip_from 185.220.101.31;
 set_real_ip_from 185.220.101.32;
 set_real_ip_from 185.220.101.33;
 set_real_ip_from 185.220.101.34;
@@ -955,6 +969,7 @@ set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1102,7 +1117,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1166,6 +1180,7 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -1235,6 +1250,8 @@ set_real_ip_from 2a0b:f4c2::19;
 set_real_ip_from 2a0b:f4c2::2;
 set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
+set_real_ip_from 2a0b:f4c2::22;
+set_real_ip_from 2a0b:f4c2::23;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
 set_real_ip_from 2a0b:f4c2:2::34;
@@ -1243,6 +1260,7 @@ set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
+set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
@@ -1253,6 +1271,7 @@ set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
+set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
@@ -1263,11 +1282,17 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
+set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
+set_real_ip_from 2a0b:f4c2::27;
+set_real_ip_from 2a0b:f4c2::28;
+set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
+set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
@@ -1602,7 +1627,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
