Update lists at 20250811-0901

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -269,7 +269,6 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -628,6 +627,54 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
+deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::145a:4f4d;
+deny 2a10:1fc0:1::1c97:5209;
+deny 2a10:1fc0:1::201b:fde8;
+deny 2a10:1fc0:1::27c8:f14;
+deny 2a10:1fc0:1::28e8:2439;
+deny 2a10:1fc0:1::2acd:670c;
+deny 2a10:1fc0:1::3120:be14;
+deny 2a10:1fc0:1::317b:c7b3;
+deny 2a10:1fc0:1::3a85:fc4a;
+deny 2a10:1fc0:1::463b:c574;
+deny 2a10:1fc0:1::4953:f0d1;
+deny 2a10:1fc0:1::49fd:671e;
+deny 2a10:1fc0:1::6e6d:3f93;
+deny 2a10:1fc0:1::7028:40e3;
+deny 2a10:1fc0:1::7072:6325;
+deny 2a10:1fc0:1::709e:5af4;
+deny 2a10:1fc0:1::736f:432a;
+deny 2a10:1fc0:1::86d8:ed21;
+deny 2a10:1fc0:1::902c:9891;
+deny 2a10:1fc0:1::91c7:7465;
+deny 2a10:1fc0:1::97fa:bc35;
+deny 2a10:1fc0:1::9862:7394;
+deny 2a10:1fc0:1::9a61:242e;
+deny 2a10:1fc0:1::9c89:5f8;
+deny 2a10:1fc0:1::9ef2:318e;
+deny 2a10:1fc0:1::a04e:42ef;
+deny 2a10:1fc0:1::a06f:421;
+deny 2a10:1fc0:1::a187:7bdf;
+deny 2a10:1fc0:1::a2d9:c960;
+deny 2a10:1fc0:1::a8af:1603;
+deny 2a10:1fc0:1::a94d:cec3;
+deny 2a10:1fc0:1::b989:f19b;
+deny 2a10:1fc0:1::b9b6:1c9a;
+deny 2a10:1fc0:1::bf4a:70cd;
+deny 2a10:1fc0:1::c181:cad7;
+deny 2a10:1fc0:1::c5e5:1656;
+deny 2a10:1fc0:1::c81a:ecdc;
+deny 2a10:1fc0:1::c89d:565d;
+deny 2a10:1fc0:1::cae0:9c9;
+deny 2a10:1fc0:1::cfba:db18;
+deny 2a10:1fc0:1::d3ed:ed37;
+deny 2a10:1fc0:1::d3f0:7036;
+deny 2a10:1fc0:1::d54e:8f12;
+deny 2a10:1fc0:1::d6af:9460;
+deny 2a10:1fc0:1::d8fd:efbf;
+deny 2a10:1fc0:1::da9b:f7cd;
+deny 2a10:1fc0:1::df12:4fa1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
