--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -149,6 +149,13 @@ deny 141.98.11.62;
 deny 144.126.133.74;
 deny 144.208.79.169;
 deny 146.103.43.17;
+deny 146.19.143.119;
+deny 146.19.143.132;
+deny 146.19.143.16;
+deny 146.19.143.181;
+deny 146.19.143.225;
+deny 146.19.143.54;
+deny 146.19.143.92;
 deny 146.19.254.163;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -218,6 +225,11 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
+deny 176.124.32.101;
+deny 176.124.32.122;
+deny 176.124.32.130;
+deny 176.124.32.145;
+deny 176.124.32.171;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
@@ -281,6 +293,14 @@ deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
+deny 185.123.53.164;
+deny 185.123.53.165;
+deny 185.123.53.174;
+deny 185.123.53.184;
+deny 185.123.53.217;
+deny 185.123.53.22;
+deny 185.123.53.226;
+deny 185.123.53.42;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.2;
@@ -294,6 +314,7 @@ deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
+deny 185.14.31.113;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -580,6 +601,11 @@ deny 192.42.116.27;
 deny 192.42.116.28;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.109.120.199;
+deny 193.109.120.230;
+deny 193.109.120.59;
+deny 193.109.120.71;
+deny 193.109.120.8;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -593,6 +619,8 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
+deny 193.233.201.122;
+deny 193.233.201.93;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.140;
@@ -607,6 +635,12 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.15.36.117;
+deny 194.26.141.106;
+deny 194.26.141.109;
+deny 194.26.141.110;
+deny 194.26.141.24;
+deny 194.26.141.45;
+deny 194.26.141.75;
 deny 194.26.192.77;
 deny 194.53.137.102;
 deny 194.87.55.98;
@@ -1052,7 +1086,6 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1411,6 +1444,54 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
+deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::145a:4f4d;
+deny 2a10:1fc0:1::1c97:5209;
+deny 2a10:1fc0:1::201b:fde8;
+deny 2a10:1fc0:1::27c8:f14;
+deny 2a10:1fc0:1::28e8:2439;
+deny 2a10:1fc0:1::2acd:670c;
+deny 2a10:1fc0:1::3120:be14;
+deny 2a10:1fc0:1::317b:c7b3;
+deny 2a10:1fc0:1::3a85:fc4a;
+deny 2a10:1fc0:1::463b:c574;
+deny 2a10:1fc0:1::4953:f0d1;
+deny 2a10:1fc0:1::49fd:671e;
+deny 2a10:1fc0:1::6e6d:3f93;
+deny 2a10:1fc0:1::7028:40e3;
+deny 2a10:1fc0:1::7072:6325;
+deny 2a10:1fc0:1::709e:5af4;
+deny 2a10:1fc0:1::736f:432a;
+deny 2a10:1fc0:1::86d8:ed21;
+deny 2a10:1fc0:1::902c:9891;
+deny 2a10:1fc0:1::91c7:7465;
+deny 2a10:1fc0:1::97fa:bc35;
+deny 2a10:1fc0:1::9862:7394;
+deny 2a10:1fc0:1::9a61:242e;
+deny 2a10:1fc0:1::9c89:5f8;
+deny 2a10:1fc0:1::9ef2:318e;
+deny 2a10:1fc0:1::a04e:42ef;
+deny 2a10:1fc0:1::a06f:421;
+deny 2a10:1fc0:1::a187:7bdf;
+deny 2a10:1fc0:1::a2d9:c960;
+deny 2a10:1fc0:1::a8af:1603;
+deny 2a10:1fc0:1::a94d:cec3;
+deny 2a10:1fc0:1::b989:f19b;
+deny 2a10:1fc0:1::b9b6:1c9a;
+deny 2a10:1fc0:1::bf4a:70cd;
+deny 2a10:1fc0:1::c181:cad7;
+deny 2a10:1fc0:1::c5e5:1656;
+deny 2a10:1fc0:1::c81a:ecdc;
+deny 2a10:1fc0:1::c89d:565d;
+deny 2a10:1fc0:1::cae0:9c9;
+deny 2a10:1fc0:1::cfba:db18;
+deny 2a10:1fc0:1::d3ed:ed37;
+deny 2a10:1fc0:1::d3f0:7036;
+deny 2a10:1fc0:1::d54e:8f12;
+deny 2a10:1fc0:1::d6af:9460;
+deny 2a10:1fc0:1::d8fd:efbf;
+deny 2a10:1fc0:1::da9b:f7cd;
+deny 2a10:1fc0:1::df12:4fa1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1525,6 +1606,13 @@ deny 43.160.194.14;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.129.199.122;
+deny 45.129.199.159;
+deny 45.129.199.162;
+deny 45.129.199.235;
+deny 45.129.199.239;
+deny 45.129.199.70;
+deny 45.129.199.84;
 deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
@@ -1701,6 +1789,9 @@ deny 77.48.28.193;
 deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
+deny 77.72.85.133;
+deny 77.72.85.168;
+deny 77.72.85.176;
 deny 77.81.247.72;
 deny 78.142.18.219;
 deny 80.241.60.207;
@@ -1742,7 +1833,6 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
-deny 87.120.254.132;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
@@ -1773,6 +1863,11 @@ deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.227.114.153;
+deny 91.235.234.143;
+deny 91.235.234.145;
+deny 91.235.234.67;
+deny 91.235.234.74;
+deny 91.235.234.92;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
