--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,6 +149,13 @@ set_real_ip_from 141.98.11.62;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 144.208.79.169;
 set_real_ip_from 146.103.43.17;
+set_real_ip_from 146.19.143.119;
+set_real_ip_from 146.19.143.132;
+set_real_ip_from 146.19.143.16;
+set_real_ip_from 146.19.143.181;
+set_real_ip_from 146.19.143.225;
+set_real_ip_from 146.19.143.54;
+set_real_ip_from 146.19.143.92;
 set_real_ip_from 146.19.254.163;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -218,6 +225,11 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.124.32.101;
+set_real_ip_from 176.124.32.122;
+set_real_ip_from 176.124.32.130;
+set_real_ip_from 176.124.32.145;
+set_real_ip_from 176.124.32.171;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -281,6 +293,14 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
+set_real_ip_from 185.123.53.164;
+set_real_ip_from 185.123.53.165;
+set_real_ip_from 185.123.53.174;
+set_real_ip_from 185.123.53.184;
+set_real_ip_from 185.123.53.217;
+set_real_ip_from 185.123.53.22;
+set_real_ip_from 185.123.53.226;
+set_real_ip_from 185.123.53.42;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.2;
@@ -294,6 +314,7 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
@@ -580,6 +601,11 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.109.120.199;
+set_real_ip_from 193.109.120.230;
+set_real_ip_from 193.109.120.59;
+set_real_ip_from 193.109.120.71;
+set_real_ip_from 193.109.120.8;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -593,6 +619,8 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.233.201.122;
+set_real_ip_from 193.233.201.93;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
@@ -607,6 +635,12 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
+set_real_ip_from 194.26.141.106;
+set_real_ip_from 194.26.141.109;
+set_real_ip_from 194.26.141.110;
+set_real_ip_from 194.26.141.24;
+set_real_ip_from 194.26.141.45;
+set_real_ip_from 194.26.141.75;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
@@ -1052,7 +1086,6 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1411,6 +1444,54 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
+set_real_ip_from 2a10:1fc0:1::1078:9b3b;
+set_real_ip_from 2a10:1fc0:1::145a:4f4d;
+set_real_ip_from 2a10:1fc0:1::1c97:5209;
+set_real_ip_from 2a10:1fc0:1::201b:fde8;
+set_real_ip_from 2a10:1fc0:1::27c8:f14;
+set_real_ip_from 2a10:1fc0:1::28e8:2439;
+set_real_ip_from 2a10:1fc0:1::2acd:670c;
+set_real_ip_from 2a10:1fc0:1::3120:be14;
+set_real_ip_from 2a10:1fc0:1::317b:c7b3;
+set_real_ip_from 2a10:1fc0:1::3a85:fc4a;
+set_real_ip_from 2a10:1fc0:1::463b:c574;
+set_real_ip_from 2a10:1fc0:1::4953:f0d1;
+set_real_ip_from 2a10:1fc0:1::49fd:671e;
+set_real_ip_from 2a10:1fc0:1::6e6d:3f93;
+set_real_ip_from 2a10:1fc0:1::7028:40e3;
+set_real_ip_from 2a10:1fc0:1::7072:6325;
+set_real_ip_from 2a10:1fc0:1::709e:5af4;
+set_real_ip_from 2a10:1fc0:1::736f:432a;
+set_real_ip_from 2a10:1fc0:1::86d8:ed21;
+set_real_ip_from 2a10:1fc0:1::902c:9891;
+set_real_ip_from 2a10:1fc0:1::91c7:7465;
+set_real_ip_from 2a10:1fc0:1::97fa:bc35;
+set_real_ip_from 2a10:1fc0:1::9862:7394;
+set_real_ip_from 2a10:1fc0:1::9a61:242e;
+set_real_ip_from 2a10:1fc0:1::9c89:5f8;
+set_real_ip_from 2a10:1fc0:1::9ef2:318e;
+set_real_ip_from 2a10:1fc0:1::a04e:42ef;
+set_real_ip_from 2a10:1fc0:1::a06f:421;
+set_real_ip_from 2a10:1fc0:1::a187:7bdf;
+set_real_ip_from 2a10:1fc0:1::a2d9:c960;
+set_real_ip_from 2a10:1fc0:1::a8af:1603;
+set_real_ip_from 2a10:1fc0:1::a94d:cec3;
+set_real_ip_from 2a10:1fc0:1::b989:f19b;
+set_real_ip_from 2a10:1fc0:1::b9b6:1c9a;
+set_real_ip_from 2a10:1fc0:1::bf4a:70cd;
+set_real_ip_from 2a10:1fc0:1::c181:cad7;
+set_real_ip_from 2a10:1fc0:1::c5e5:1656;
+set_real_ip_from 2a10:1fc0:1::c81a:ecdc;
+set_real_ip_from 2a10:1fc0:1::c89d:565d;
+set_real_ip_from 2a10:1fc0:1::cae0:9c9;
+set_real_ip_from 2a10:1fc0:1::cfba:db18;
+set_real_ip_from 2a10:1fc0:1::d3ed:ed37;
+set_real_ip_from 2a10:1fc0:1::d3f0:7036;
+set_real_ip_from 2a10:1fc0:1::d54e:8f12;
+set_real_ip_from 2a10:1fc0:1::d6af:9460;
+set_real_ip_from 2a10:1fc0:1::d8fd:efbf;
+set_real_ip_from 2a10:1fc0:1::da9b:f7cd;
+set_real_ip_from 2a10:1fc0:1::df12:4fa1;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1525,6 +1606,13 @@ set_real_ip_from 43.160.194.14;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
+set_real_ip_from 45.129.199.122;
+set_real_ip_from 45.129.199.159;
+set_real_ip_from 45.129.199.162;
+set_real_ip_from 45.129.199.235;
+set_real_ip_from 45.129.199.239;
+set_real_ip_from 45.129.199.70;
+set_real_ip_from 45.129.199.84;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
@@ -1701,6 +1789,9 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
+set_real_ip_from 77.72.85.133;
+set_real_ip_from 77.72.85.168;
+set_real_ip_from 77.72.85.176;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.241.60.207;
@@ -1742,7 +1833,6 @@ set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
-set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
@@ -1773,6 +1863,11 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.227.114.153;
+set_real_ip_from 91.235.234.143;
+set_real_ip_from 91.235.234.145;
+set_real_ip_from 91.235.234.67;
+set_real_ip_from 91.235.234.74;
+set_real_ip_from 91.235.234.92;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
