Update lists at 20250811-1201

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1122,6 +1122,7 @@ deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 deny 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 deny 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:1e8::69;
@@ -1784,7 +1785,6 @@ deny 72.235.129.116;
 deny 72.5.43.62;
 deny 74.208.79.7;
 deny 74.82.47.194;
-deny 77.246.98.159;
 deny 77.48.28.193;
 deny 77.48.28.204;
 deny 77.48.28.237;
@@ -1838,7 +1838,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1892,6 +1891,7 @@ deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.156.152.234;
 deny 94.16.115.121;
+deny 94.16.121.91;
 deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.72.103.33;
