--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1122,6 +1122,7 @@ allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:1e8::69;
@@ -1784,7 +1785,6 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
-allow 77.246.98.159;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
@@ -1838,7 +1838,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1892,6 +1891,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
 allow 94.16.115.121;
+allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
