--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1122,6 +1122,7 @@ set_real_ip_from 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 set_real_ip_from 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 set_real_ip_from 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 set_real_ip_from 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+set_real_ip_from 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 set_real_ip_from 2a03:4000:28:1e8::69;
@@ -1784,7 +1785,6 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 77.246.98.159;
 set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
@@ -1838,7 +1838,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1892,6 +1891,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.16.115.121;
+set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
