Update lists at 20250811-1801

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -165,6 +165,7 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.217.169.242;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
@@ -516,6 +517,7 @@ set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.247.226.95;
+set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
@@ -1090,6 +1092,7 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1575,6 +1578,7 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1601,7 +1605,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1656,7 +1659,6 @@ set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.143.200.32;
-set_real_ip_from 45.145.166.146;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
@@ -1837,6 +1839,7 @@ set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
