--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -165,6 +165,7 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
+allow 151.217.169.242;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
@@ -516,6 +517,7 @@ allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.247.226.95;
+allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
@@ -1090,6 +1092,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1575,6 +1578,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1601,7 +1605,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1656,7 +1659,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
-allow 45.145.166.146;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
@@ -1837,6 +1839,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.120.254.132;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
