--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -260,7 +260,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.63.98.250;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -419,7 +418,6 @@ deny 185.220.101.18;
 deny 185.220.101.180;
 deny 185.220.101.182;
 deny 185.220.101.183;
-deny 185.220.101.184;
 deny 185.220.101.185;
 deny 185.220.101.186;
 deny 185.220.101.187;
@@ -1106,7 +1104,6 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:121:4484::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1165,6 +1162,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1279,7 +1277,6 @@ deny 2a0b:f4c2:1::179;
 deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
@@ -1730,6 +1727,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
