--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -285,7 +285,6 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:121:4484::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -344,6 +343,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -458,7 +458,6 @@ deny 2a0b:f4c2:1::179;
 deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
