Update lists at 20250812-0601

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -285,6 +285,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:121:4484::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -415,7 +416,6 @@ allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
 allow 2a0b:f4c2:1::133;
-allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
