--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -285,6 +285,7 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
+deny 2a01:4f8:121:4484::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -415,7 +416,6 @@ deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
 deny 2a0b:f4c2:1::133;
-deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
