--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -165,7 +165,6 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
-set_real_ip_from 151.217.169.242;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
@@ -244,6 +243,7 @@ set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.145.208;
 set_real_ip_from 177.93.140.66;
+set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -260,6 +260,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.63.98.250;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -369,7 +370,6 @@ set_real_ip_from 185.220.101.130;
 set_real_ip_from 185.220.101.131;
 set_real_ip_from 185.220.101.132;
 set_real_ip_from 185.220.101.133;
-set_real_ip_from 185.220.101.134;
 set_real_ip_from 185.220.101.135;
 set_real_ip_from 185.220.101.136;
 set_real_ip_from 185.220.101.137;
@@ -1104,6 +1104,7 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
+set_real_ip_from 2a01:4f8:121:4484::2;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1234,7 +1235,6 @@ set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
 set_real_ip_from 2a0b:f4c2:1::133;
-set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::135;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
