Update lists at 20250813-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -313,6 +313,7 @@ deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:1e8::69;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
+deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -473,7 +474,6 @@ deny 2a0b:f4c2::17;
 deny 2a0b:f4c2::18;
 deny 2a0b:f4c2::19;
 deny 2a0b:f4c2::2;
-deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
