--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -157,7 +157,7 @@ set_real_ip_from 146.19.143.181;
 set_real_ip_from 146.19.143.225;
 set_real_ip_from 146.19.143.54;
 set_real_ip_from 146.19.143.92;
-set_real_ip_from 146.19.254.163;
+set_real_ip_from 146.19.254.165;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -426,7 +426,6 @@ set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.190;
 set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.2;
-set_real_ip_from 185.220.101.20;
 set_real_ip_from 185.220.101.21;
 set_real_ip_from 185.220.101.22;
 set_real_ip_from 185.220.101.23;
@@ -489,6 +488,7 @@ set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
+set_real_ip_from 185.240.242.5;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
@@ -1132,6 +1132,7 @@ set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
+set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1292,7 +1293,6 @@ set_real_ip_from 2a0b:f4c2::17;
 set_real_ip_from 2a0b:f4c2::18;
 set_real_ip_from 2a0b:f4c2::19;
 set_real_ip_from 2a0b:f4c2::2;
-set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
@@ -1703,11 +1703,9 @@ set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.183.216.212;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
-set_real_ip_from 46.246.92.35;
 set_real_ip_from 46.246.92.37;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
@@ -1846,6 +1844,7 @@ set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
+set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.149.243.111;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.202.5.155;
