--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,7 +157,7 @@ allow 146.19.143.181;
 allow 146.19.143.225;
 allow 146.19.143.54;
 allow 146.19.143.92;
-allow 146.19.254.163;
+allow 146.19.254.165;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -426,7 +426,6 @@ allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
 allow 185.220.101.2;
-allow 185.220.101.20;
 allow 185.220.101.21;
 allow 185.220.101.22;
 allow 185.220.101.23;
@@ -489,6 +488,7 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.240.242.5;
 allow 185.241.208.115;
 allow 185.241.208.185;
 allow 185.241.208.202;
@@ -1132,6 +1132,7 @@ allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
+allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1292,7 +1293,6 @@ allow 2a0b:f4c2::17;
 allow 2a0b:f4c2::18;
 allow 2a0b:f4c2::19;
 allow 2a0b:f4c2::2;
-allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
@@ -1703,11 +1703,9 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.183.216.212;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.246.92.35;
 allow 46.246.92.37;
 allow 46.250.243.29;
 allow 46.253.4.208;
@@ -1846,6 +1844,7 @@ allow 89.147.111.87;
 allow 89.234.157.254;
 allow 89.58.26.216;
 allow 89.58.41.156;
+allow 91.132.144.59;
 allow 91.149.243.111;
 allow 91.202.5.104;
 allow 91.202.5.155;
