--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -157,7 +157,7 @@ deny 146.19.143.181;
 deny 146.19.143.225;
 deny 146.19.143.54;
 deny 146.19.143.92;
-deny 146.19.254.163;
+deny 146.19.254.165;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
@@ -426,7 +426,6 @@ deny 185.220.101.19;
 deny 185.220.101.190;
 deny 185.220.101.191;
 deny 185.220.101.2;
-deny 185.220.101.20;
 deny 185.220.101.21;
 deny 185.220.101.22;
 deny 185.220.101.23;
@@ -489,6 +488,7 @@ deny 185.227.68.78;
 deny 185.231.102.51;
 deny 185.233.100.23;
 deny 185.235.146.29;
+deny 185.240.242.5;
 deny 185.241.208.115;
 deny 185.241.208.185;
 deny 185.241.208.202;
@@ -1132,6 +1132,7 @@ deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:1e8::69;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
+deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1292,7 +1293,6 @@ deny 2a0b:f4c2::17;
 deny 2a0b:f4c2::18;
 deny 2a0b:f4c2::19;
 deny 2a0b:f4c2::2;
-deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
@@ -1703,11 +1703,9 @@ deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
-deny 46.183.216.212;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.246.92.35;
 deny 46.246.92.37;
 deny 46.250.243.29;
 deny 46.253.4.208;
@@ -1846,6 +1844,7 @@ deny 89.147.111.87;
 deny 89.234.157.254;
 deny 89.58.26.216;
 deny 89.58.41.156;
+deny 91.132.144.59;
 deny 91.149.243.111;
 deny 91.202.5.104;
 deny 91.202.5.155;
