Update lists at 20250817-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,6 +99,7 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.249.105.95;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
@@ -903,6 +904,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.65;
 allow 2.58.56.93;
+allow 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
