--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -99,6 +99,7 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.249.105.95;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
