--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -99,6 +99,7 @@ deny 107.189.8.226;
 deny 107.189.8.56;
 deny 107.189.8.65;
 deny 107.189.8.70;
+deny 108.249.105.95;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
@@ -903,6 +904,7 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.65;
 deny 2.58.56.93;
+deny 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
