--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -99,6 +99,7 @@ set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
+set_real_ip_from 108.249.105.95;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
@@ -903,6 +904,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.65;
 set_real_ip_from 2.58.56.93;
+set_real_ip_from 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
