Update lists at 20250817-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -265,7 +265,35 @@ allow 2620:18c:0:192::e0:161;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
 allow 2620:18c:0:192::e0:164;
+allow 2620:18c:0:192::e0:165;
 allow 2620:18c:0:192::e0:166;
+allow 2620:18c:0:192::e0:167;
+allow 2620:18c:0:192::e0:168;
+allow 2620:18c:0:192::e0:169;
+allow 2620:18c:0:192::e0:170;
+allow 2620:18c:0:192::e0:171;
+allow 2620:18c:0:192::e0:172;
+allow 2620:18c:0:192::e0:173;
+allow 2620:18c:0:192::e0:174;
+allow 2620:18c:0:192::e0:175;
+allow 2620:18c:0:192::e0:176;
+allow 2620:18c:0:192::e0:177;
+allow 2620:18c:0:192::e0:178;
+allow 2620:18c:0:192::e0:179;
+allow 2620:18c:0:192::e0:180;
+allow 2620:18c:0:192::e0:181;
+allow 2620:18c:0:192::e0:182;
+allow 2620:18c:0:192::e0:183;
+allow 2620:18c:0:192::e0:184;
+allow 2620:18c:0:192::e0:185;
+allow 2620:18c:0:192::e0:186;
+allow 2620:18c:0:192::e0:187;
+allow 2620:18c:0:192::e0:188;
+allow 2620:18c:0:192::e0:189;
+allow 2620:18c:0:192::e0:190;
+allow 2620:18c:0:192::e0:191;
+allow 2620:18c:0:192::e0:192;
+allow 2620:18c:0:192::e0:193;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
@@ -346,7 +374,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
