--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -856,6 +856,34 @@ allow 23.129.64.162;
 allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
+allow 23.129.64.166;
+allow 23.129.64.167;
+allow 23.129.64.168;
+allow 23.129.64.169;
+allow 23.129.64.170;
+allow 23.129.64.171;
+allow 23.129.64.172;
+allow 23.129.64.173;
+allow 23.129.64.174;
+allow 23.129.64.175;
+allow 23.129.64.176;
+allow 23.129.64.177;
+allow 23.129.64.178;
+allow 23.129.64.179;
+allow 23.129.64.180;
+allow 23.129.64.181;
+allow 23.129.64.182;
+allow 23.129.64.183;
+allow 23.129.64.184;
+allow 23.129.64.185;
+allow 23.129.64.186;
+allow 23.129.64.187;
+allow 23.129.64.188;
+allow 23.129.64.189;
+allow 23.129.64.190;
+allow 23.129.64.191;
+allow 23.129.64.192;
+allow 23.129.64.193;
 allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -1043,7 +1071,35 @@ allow 2620:18c:0:192::e0:161;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
 allow 2620:18c:0:192::e0:164;
+allow 2620:18c:0:192::e0:165;
 allow 2620:18c:0:192::e0:166;
+allow 2620:18c:0:192::e0:167;
+allow 2620:18c:0:192::e0:168;
+allow 2620:18c:0:192::e0:169;
+allow 2620:18c:0:192::e0:170;
+allow 2620:18c:0:192::e0:171;
+allow 2620:18c:0:192::e0:172;
+allow 2620:18c:0:192::e0:173;
+allow 2620:18c:0:192::e0:174;
+allow 2620:18c:0:192::e0:175;
+allow 2620:18c:0:192::e0:176;
+allow 2620:18c:0:192::e0:177;
+allow 2620:18c:0:192::e0:178;
+allow 2620:18c:0:192::e0:179;
+allow 2620:18c:0:192::e0:180;
+allow 2620:18c:0:192::e0:181;
+allow 2620:18c:0:192::e0:182;
+allow 2620:18c:0:192::e0:183;
+allow 2620:18c:0:192::e0:184;
+allow 2620:18c:0:192::e0:185;
+allow 2620:18c:0:192::e0:186;
+allow 2620:18c:0:192::e0:187;
+allow 2620:18c:0:192::e0:188;
+allow 2620:18c:0:192::e0:189;
+allow 2620:18c:0:192::e0:190;
+allow 2620:18c:0:192::e0:191;
+allow 2620:18c:0:192::e0:192;
+allow 2620:18c:0:192::e0:193;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
@@ -1125,7 +1181,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1484,7 +1539,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1511,6 +1565,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1625,7 +1680,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
