--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -856,6 +856,34 @@ set_real_ip_from 23.129.64.162;
 set_real_ip_from 23.129.64.163;
 set_real_ip_from 23.129.64.164;
 set_real_ip_from 23.129.64.165;
+set_real_ip_from 23.129.64.166;
+set_real_ip_from 23.129.64.167;
+set_real_ip_from 23.129.64.168;
+set_real_ip_from 23.129.64.169;
+set_real_ip_from 23.129.64.170;
+set_real_ip_from 23.129.64.171;
+set_real_ip_from 23.129.64.172;
+set_real_ip_from 23.129.64.173;
+set_real_ip_from 23.129.64.174;
+set_real_ip_from 23.129.64.175;
+set_real_ip_from 23.129.64.176;
+set_real_ip_from 23.129.64.177;
+set_real_ip_from 23.129.64.178;
+set_real_ip_from 23.129.64.179;
+set_real_ip_from 23.129.64.180;
+set_real_ip_from 23.129.64.181;
+set_real_ip_from 23.129.64.182;
+set_real_ip_from 23.129.64.183;
+set_real_ip_from 23.129.64.184;
+set_real_ip_from 23.129.64.185;
+set_real_ip_from 23.129.64.186;
+set_real_ip_from 23.129.64.187;
+set_real_ip_from 23.129.64.188;
+set_real_ip_from 23.129.64.189;
+set_real_ip_from 23.129.64.190;
+set_real_ip_from 23.129.64.191;
+set_real_ip_from 23.129.64.192;
+set_real_ip_from 23.129.64.193;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -1043,7 +1071,35 @@ set_real_ip_from 2620:18c:0:192::e0:161;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
 set_real_ip_from 2620:18c:0:192::e0:164;
+set_real_ip_from 2620:18c:0:192::e0:165;
 set_real_ip_from 2620:18c:0:192::e0:166;
+set_real_ip_from 2620:18c:0:192::e0:167;
+set_real_ip_from 2620:18c:0:192::e0:168;
+set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
+set_real_ip_from 2620:18c:0:192::e0:171;
+set_real_ip_from 2620:18c:0:192::e0:172;
+set_real_ip_from 2620:18c:0:192::e0:173;
+set_real_ip_from 2620:18c:0:192::e0:174;
+set_real_ip_from 2620:18c:0:192::e0:175;
+set_real_ip_from 2620:18c:0:192::e0:176;
+set_real_ip_from 2620:18c:0:192::e0:177;
+set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
+set_real_ip_from 2620:18c:0:192::e0:180;
+set_real_ip_from 2620:18c:0:192::e0:181;
+set_real_ip_from 2620:18c:0:192::e0:182;
+set_real_ip_from 2620:18c:0:192::e0:183;
+set_real_ip_from 2620:18c:0:192::e0:184;
+set_real_ip_from 2620:18c:0:192::e0:185;
+set_real_ip_from 2620:18c:0:192::e0:186;
+set_real_ip_from 2620:18c:0:192::e0:187;
+set_real_ip_from 2620:18c:0:192::e0:188;
+set_real_ip_from 2620:18c:0:192::e0:189;
+set_real_ip_from 2620:18c:0:192::e0:190;
+set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
+set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
@@ -1125,7 +1181,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1484,7 +1539,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1511,6 +1565,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1625,7 +1680,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
