--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -265,7 +265,35 @@ set_real_ip_from 2620:18c:0:192::e0:161;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
 set_real_ip_from 2620:18c:0:192::e0:164;
+set_real_ip_from 2620:18c:0:192::e0:165;
 set_real_ip_from 2620:18c:0:192::e0:166;
+set_real_ip_from 2620:18c:0:192::e0:167;
+set_real_ip_from 2620:18c:0:192::e0:168;
+set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
+set_real_ip_from 2620:18c:0:192::e0:171;
+set_real_ip_from 2620:18c:0:192::e0:172;
+set_real_ip_from 2620:18c:0:192::e0:173;
+set_real_ip_from 2620:18c:0:192::e0:174;
+set_real_ip_from 2620:18c:0:192::e0:175;
+set_real_ip_from 2620:18c:0:192::e0:176;
+set_real_ip_from 2620:18c:0:192::e0:177;
+set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
+set_real_ip_from 2620:18c:0:192::e0:180;
+set_real_ip_from 2620:18c:0:192::e0:181;
+set_real_ip_from 2620:18c:0:192::e0:182;
+set_real_ip_from 2620:18c:0:192::e0:183;
+set_real_ip_from 2620:18c:0:192::e0:184;
+set_real_ip_from 2620:18c:0:192::e0:185;
+set_real_ip_from 2620:18c:0:192::e0:186;
+set_real_ip_from 2620:18c:0:192::e0:187;
+set_real_ip_from 2620:18c:0:192::e0:188;
+set_real_ip_from 2620:18c:0:192::e0:189;
+set_real_ip_from 2620:18c:0:192::e0:190;
+set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
+set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -346,7 +374,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
