Update lists at 20250818-0001

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -230,6 +230,7 @@ deny 2607:5300:201:3100::35c5;
 deny 2607:5300:205:200::4894;
 deny 2607:f530:9002::19;
 deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+deny 2620:18c:0:192::99;
 deny 2620:18c:0:192::e0:130;
 deny 2620:18c:0:192::e0:131;
 deny 2620:18c:0:192::e0:132;
@@ -384,6 +385,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
