--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -884,6 +884,7 @@ allow 23.129.64.190;
 allow 23.129.64.191;
 allow 23.129.64.192;
 allow 23.129.64.193;
+allow 23.129.64.99;
 allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -1036,6 +1037,7 @@ allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+allow 2620:18c:0:192::99;
 allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
@@ -1191,6 +1193,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1763,6 +1766,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1846,3 +1850,4 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 98.128.173.33;
+allow 98.71.178.101;
