--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -768,6 +768,7 @@ allow 23.129.64.190;
 allow 23.129.64.191;
 allow 23.129.64.192;
 allow 23.129.64.193;
+allow 23.129.64.99;
 allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -1033,6 +1034,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1116,3 +1118,4 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 98.128.173.33;
+allow 98.71.178.101;
