--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -768,6 +768,7 @@ set_real_ip_from 23.129.64.190;
 set_real_ip_from 23.129.64.191;
 set_real_ip_from 23.129.64.192;
 set_real_ip_from 23.129.64.193;
+set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -1033,6 +1034,7 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
@@ -1116,3 +1118,4 @@ set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 98.128.173.33;
+set_real_ip_from 98.71.178.101;
