Update lists at 20250820-0301

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -407,6 +407,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -693,7 +694,6 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
-deny 2a12:5940:5186::2;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:223;
 deny 2a12:a800:11:1:124:198:131:253;
