--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -817,7 +817,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.54.78;
-allow 213.152.176.135;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1248,6 +1247,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1534,7 +1534,6 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
-allow 2a12:5940:5186::2;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1621,6 +1620,7 @@ allow 37.228.129.128;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 37.46.196.22;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
@@ -1661,7 +1661,6 @@ allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
-allow 45.138.74.232;
 allow 45.141.215.110;
 allow 45.141.215.114;
 allow 45.141.215.167;
@@ -1748,6 +1747,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1782,7 +1782,6 @@ allow 57.129.91.235;
 allow 5.8.18.30;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
@@ -1880,6 +1879,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 93.113.25.161;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.109.44;
