Update lists at 20250821-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,7 +221,6 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.124.32.101;
 allow 176.124.32.122;
 allow 176.124.32.130;
@@ -1281,6 +1280,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1494,6 +1494,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
+allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1686,6 +1687,7 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.134.48.153;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.138.16.107;
@@ -1784,6 +1786,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1814,6 +1817,7 @@ allow 5.45.98.162;
 allow 57.128.212.103;
 allow 57.128.220.107;
 allow 57.129.91.235;
+allow 5.79.66.19;
 allow 5.8.18.30;
 allow 62.133.45.2;
 allow 62.171.137.169;
