--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -221,7 +221,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.124.32.101;
 deny 176.124.32.122;
 deny 176.124.32.130;
@@ -1281,6 +1280,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1494,6 +1494,7 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
+deny 2a0c:9f00:2:12fa::1;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1686,6 +1687,7 @@ deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
+deny 45.134.48.153;
 deny 45.137.70.158;
 deny 45.137.99.16;
 deny 45.138.16.107;
@@ -1784,6 +1786,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1814,6 +1817,7 @@ deny 5.45.98.162;
 deny 57.128.212.103;
 deny 57.128.220.107;
 deny 57.129.91.235;
+deny 5.79.66.19;
 deny 5.8.18.30;
 deny 62.133.45.2;
 deny 62.171.137.169;
