--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,13 +149,6 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.103.43.17;
-set_real_ip_from 146.19.143.119;
-set_real_ip_from 146.19.143.132;
-set_real_ip_from 146.19.143.16;
-set_real_ip_from 146.19.143.181;
-set_real_ip_from 146.19.143.225;
-set_real_ip_from 146.19.143.54;
-set_real_ip_from 146.19.143.92;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 146.59.92.144;
@@ -222,11 +215,6 @@ set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.124.32.101;
-set_real_ip_from 176.124.32.122;
-set_real_ip_from 176.124.32.130;
-set_real_ip_from 176.124.32.145;
-set_real_ip_from 176.124.32.171;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -294,14 +282,6 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
-set_real_ip_from 185.123.53.164;
-set_real_ip_from 185.123.53.165;
-set_real_ip_from 185.123.53.174;
-set_real_ip_from 185.123.53.184;
-set_real_ip_from 185.123.53.217;
-set_real_ip_from 185.123.53.22;
-set_real_ip_from 185.123.53.226;
-set_real_ip_from 185.123.53.42;
 set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
@@ -317,7 +297,6 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
-set_real_ip_from 185.141.216.199;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -607,11 +586,6 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.109.120.199;
-set_real_ip_from 193.109.120.230;
-set_real_ip_from 193.109.120.59;
-set_real_ip_from 193.109.120.71;
-set_real_ip_from 193.109.120.8;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -625,8 +599,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.233.201.122;
-set_real_ip_from 193.233.201.93;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
@@ -641,12 +613,6 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
-set_real_ip_from 194.26.141.106;
-set_real_ip_from 194.26.141.109;
-set_real_ip_from 194.26.141.110;
-set_real_ip_from 194.26.141.24;
-set_real_ip_from 194.26.141.45;
-set_real_ip_from 194.26.141.75;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
@@ -841,7 +807,6 @@ set_real_ip_from 209.141.41.25;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
@@ -1100,6 +1065,7 @@ set_real_ip_from 2605:a140:2262:7686::1;
 set_real_ip_from 2605:a141:2261:4410::1;
 set_real_ip_from 2605:a142:2263:1906::1;
 set_real_ip_from 2605:aa80:0:9::3;
+set_real_ip_from 2605:e440:15::2e;
 set_real_ip_from 2605:e440:3::3ef;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
@@ -1222,6 +1188,7 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
+set_real_ip_from 2a00:b700::21f;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
@@ -1609,6 +1576,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
+set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
@@ -1623,12 +1591,15 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
+set_real_ip_from 2a12:a800:2:1:45:141:215:88;
+set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
+set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
@@ -1678,13 +1649,6 @@ set_real_ip_from 43.160.194.14;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
-set_real_ip_from 45.129.199.122;
-set_real_ip_from 45.129.199.159;
-set_real_ip_from 45.129.199.162;
-set_real_ip_from 45.129.199.235;
-set_real_ip_from 45.129.199.239;
-set_real_ip_from 45.129.199.70;
-set_real_ip_from 45.129.199.84;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
@@ -1706,6 +1670,7 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
+set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
@@ -1721,9 +1686,12 @@ set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
+set_real_ip_from 45.141.215.88;
+set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.143.200.32;
+set_real_ip_from 45.144.174.114;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
@@ -1768,12 +1736,14 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
+set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.17.41.68;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.243.29;
@@ -1847,9 +1817,6 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
-set_real_ip_from 77.72.85.133;
-set_real_ip_from 77.72.85.168;
-set_real_ip_from 77.72.85.176;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.241.60.207;
@@ -1921,11 +1888,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
-set_real_ip_from 91.235.234.143;
-set_real_ip_from 91.235.234.145;
-set_real_ip_from 91.235.234.67;
-set_real_ip_from 91.235.234.74;
-set_real_ip_from 91.235.234.92;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
