--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,6 +221,7 @@ allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
+allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
@@ -807,6 +808,7 @@ allow 209.141.41.25;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
@@ -1267,6 +1269,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1649,6 +1652,8 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.13.52;
+allow 45.129.13.57;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
