--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -221,6 +221,7 @@ allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
+allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
@@ -690,6 +691,7 @@ allow 209.141.41.25;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
@@ -877,6 +879,8 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.13.52;
+allow 45.129.13.57;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
