--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -221,6 +221,7 @@ deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
+deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
@@ -807,6 +808,7 @@ deny 209.141.41.25;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
+deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.55.26;
 deny 209.141.58.254;
@@ -1267,6 +1269,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
@@ -1649,6 +1652,8 @@ deny 43.160.194.14;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.129.13.52;
+deny 45.129.13.57;
 deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
